Add single photo view

--- a/PhotoCloud.Client/src/app/app.component.html
+++ b/PhotoCloud.Client/src/app/app.component.html
@@ -1,6 +1,1 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div class="container">
-  <div *ngFor="let photo of photos | async" class="thumbnail">
-    <img src="{{ photostorage.small + photo.Name }}" alt="">
-  </div>
-</div>
+<router-outlet></router-outlet>
